testsuite/tests/properties/invalid_eq/entity_cross.lkt
import common

class Example: FooNode {
    @exported fun prop(): Bool = self.parent.as[Lit] == self
}
